--- a/WpfAgendaDatabase/MainWindow.xaml
+++ b/WpfAgendaDatabase/MainWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfAgendaDatabase"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="1200">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
@@ -23,13 +23,14 @@
             </Grid.RowDefinitions>
 
             <!-- Titre -->
-            <TextBlock Text="Titre ici" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Agenda Personnel :" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
             <!-- Boutons pour changer la vue -->
             <Button Content="Accueil" Grid.Row="1" Margin="10" Click="BtnAccueil_Click"/>
             <Button Content="Calendrier" Grid.Row="2" Margin="10" Click="BtnCalendrier_Click"/>
             <Button Content="Contact" Grid.Row="3" Margin="10" Click="BtnContact_Click"/>
             <Button Content="Gestion" Grid.Row="4" Margin="10" Click="BtnGestion_Click"/>
+            <TextBlock Text="By : Alexandre Coene" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#808184"/>
             <!-- Vous pouvez ajouter plus de boutons si nécessaire -->
         </Grid>
 
