--- a/WpfAgendaDatabase/App.xaml
+++ b/WpfAgendaDatabase/App.xaml
@@ -4,6 +4,28 @@
              xmlns:local="clr-namespace:WpfAgendaDatabase"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="RoundedButtonStyle" TargetType="Button">
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#FF65758B" Offset="0"/>
+                        <GradientStop Color="#FF4B587A" Offset="1"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="BorderBrush" Value="#FF4B587A"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <!--<Setter Property="CornerRadius" Value="15"/>-->
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Opacity" Value="0.8"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
+
 </Application>
