--- a/WpfAgendaDatabase/View/ViewContact.xaml
+++ b/WpfAgendaDatabase/View/ViewContact.xaml
@@ -7,7 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
+
+
+
         <DataGrid Margin="20,71,20,20" AutoGenerateColumns="False" CanUserAddRows="False" ItemsSource="{Binding Identité}" x:Name="DataGridContacts" IsReadOnly="False" CellEditEnding="DataGridContacts_CellEditEnding">
+
+
+            <!-- Assurez-vous que ce StackPanel est placé au-dessus de votre DataGrid pour un agencement logique -->
+
             <DataGrid.Columns >
                 <DataGridTextColumn Header="#" Binding="{Binding Idtable1}" Width="20"/>
                 <DataGridTextColumn Header="Nom" Binding="{Binding Nom}" Width="100"/>
@@ -17,14 +24,24 @@
                 <DataGridTextColumn Header="Sexe" Binding="{Binding Sexe}" Width="150"/>
                 <DataGridTextColumn Header="Date de naissance" Binding="{Binding DateDeNaissance}" Width="150"/>
                 <DataGridTextColumn Header="Ville de naissance" Binding="{Binding VilleDeNaissance}" Width="150"/>
-                
+                <DataGridTextColumn Header="Relation" Binding="{Binding Relation}" Width="150" />
                 <!-- Add more columns as necessary -->
             </DataGrid.Columns>
         </DataGrid>
-           
+
         <Button Content="Ajouter" HorizontalAlignment="Left" Margin="20,21,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Ajouter"/>
         <Button Content="Supprimer" HorizontalAlignment="Left" Margin="116,21,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_Supprimer"/>
         <Button Content="Modifier" HorizontalAlignment="Left" Margin="212,21,0,0" VerticalAlignment="Top" Width="75"/>
+        
+        <StackPanel Orientation="Horizontal" Margin="10">
+            <TextBox x:Name="SearchBox" Width="200" Margin="300,10,10,400" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <Button Content="Rechercher" Click="Button_Click_Rechercher" Margin="5,10,10,400" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <StackPanel Orientation="Horizontal">
+                <Button Content="Ami" Click="FilterByRelation_Click" Margin="5,10,10,400" HorizontalAlignment="Left" VerticalAlignment="Top"  />
+                <Button Content="Famille" Click="FilterByRelation_Click" Margin="5,10,10,400" HorizontalAlignment="Left" VerticalAlignment="Top" />
+                <Button Content="Travail" Click="FilterByRelation_Click" Margin="5,10,10,400" HorizontalAlignment="Left" VerticalAlignment="Top" />
+            </StackPanel>
+        </StackPanel>
 
         <ContentControl x:Name="MainContent" />
     </Grid>
