--- a/WpfAgendaDatabase/View/ViewAjouter.xaml
+++ b/WpfAgendaDatabase/View/ViewAjouter.xaml
@@ -20,8 +20,10 @@
             <TextBox x:Name="TB_Sexe" Margin="5" ToolTip="Entrez le sexe"/>
             <Label Content="Date de naissance :" Margin="5"/>
             <TextBox x:Name="TB_Datedenaissance" Margin="5" ToolTip="Entrez la date de naissance"/>
-
+            <Label Content="Ville de naissance :" Margin="5"/>
+            <TextBox x:Name="TB_VilleDeNaissance" Margin="5" ToolTip="Entrez la ville de naissance"/>
             <Label Content="Catégorie :" Margin="5"/>
+
             <StackPanel Orientation="Horizontal" Margin="5">
                 <CheckBox x:Name="CB_Famille" Content="Famille" Margin="5"/>
                 <CheckBox x:Name="CB_Ami" Content="Ami" Margin="5"/>
@@ -29,6 +31,5 @@
             </StackPanel>
             <Button Content="Ajouter" Click="Ajouter_Click" Margin="5"/>
         </StackPanel>
-
     </Grid>
 </UserControl>
