--- a/WpfAgendaDatabase/MainWindow.xaml
+++ b/WpfAgendaDatabase/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfAgendaDatabase"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1200">
-    <Grid>
+    <Grid Background="AliceBlue">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
@@ -29,7 +29,7 @@
             <Button Content="Accueil" Grid.Row="1" Margin="10" Click="BtnAccueil_Click" Style="{StaticResource RoundedButtonStyle}"/>
             <Button Content="Calendrier" Grid.Row="2" Margin="10" Click="BtnCalendrier_Click" Style="{StaticResource RoundedButtonStyle}" />
             <Button Content="Contact" Grid.Row="3" Margin="10" Click="BtnContact_Click" Style="{StaticResource RoundedButtonStyle}"/>
-            <Button Content="Gestion" Grid.Row="4" Margin="10" Click="BtnGestion_Click" Style="{StaticResource RoundedButtonStyle}"/>
+            <Button Content="To Do List" Grid.Row="4" Margin="10" Click="BtnGestion_Click" Style="{StaticResource RoundedButtonStyle}"/>
             <TextBlock Text="By : Alexandre Coene" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="#808184" Margin="0,29,0,0"/>
             <TextBlock Text="V1 Agenda" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="#808184" Margin="0,61,0,0"/>
             <!-- Vous pouvez ajouter plus de boutons si nécessaire -->
