--- a/WpfAgendaDatabase/View/ViewCalendrier.xaml
+++ b/WpfAgendaDatabase/View/ViewCalendrier.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:WpfAgendaDatabase.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid Background="AliceBlue">
             
     </Grid>
 </UserControl>
