--- a/WpfAgendaDatabase/MainWindow.xaml
+++ b/WpfAgendaDatabase/MainWindow.xaml
@@ -11,10 +11,13 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
+        <Border Grid.Column="0" 
+        BorderBrush="Black" 
+            BorderThickness="2"     
+            CornerRadius="5">
+            <Grid Background="{DynamicResource MyGradientBrush}">
+                <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -23,17 +26,19 @@
             </Grid.RowDefinitions>
 
             <!-- Titre -->
-            <TextBlock Text="Agenda Personnel :" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <TextBlock Text="Agenda Personnel :" FontSize="25" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" TextDecorations="Underline"/>
 
             <!-- Boutons pour changer la vue -->
-            <Button Content="Accueil" Grid.Row="1" Margin="10" Click="BtnAccueil_Click" Style="{StaticResource RoundedButtonStyle}"/>
-            <Button Content="Calendrier" Grid.Row="2" Margin="10" Click="BtnCalendrier_Click" Style="{StaticResource RoundedButtonStyle}" />
-            <Button Content="Contact" Grid.Row="3" Margin="10" Click="BtnContact_Click" Style="{StaticResource RoundedButtonStyle}"/>
-            <Button Content="To Do List" Grid.Row="4" Margin="10" Click="BtnGestion_Click" Style="{StaticResource RoundedButtonStyle}"/>
-            <TextBlock Text="By : Alexandre Coene" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="#808184" Margin="0,29,0,0"/>
-            <TextBlock Text="V1 Agenda" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="#808184" Margin="0,61,0,0"/>
+            <Button Content="Accueil 🏠" Grid.Row="1" Margin="10" Click="BtnAccueil_Click" Style="{StaticResource RoundedButtonStyle}"/>
+            <Button Content="Calendrier 🗓️" Grid.Row="2" Margin="10" Click="BtnCalendrier_Click" Style="{StaticResource RoundedButtonStyle}" />
+            <Button Content="Contact ☎️" Grid.Row="3" Margin="10" Click="BtnContact_Click" Style="{StaticResource RoundedButtonStyle}"/>
+            <Button Content="To Do List 📜" Grid.Row="4" Margin="10" Click="BtnGestion_Click" Style="{StaticResource RoundedButtonStyle}"/>
+            <TextBlock Text="By : Alexandre Coene" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="LightGray" Margin="0,29,0,0"/>
+            <TextBlock Text="V2 Agenda" Grid.Row="5" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="LightGray" Margin="0,61,0,0"/>
             <!-- Vous pouvez ajouter plus de boutons si nécessaire -->
         </Grid>
+       </Border>
+
 
         <!-- Conteneur Droit (Vide), qui va contenir les vues -->
         <ContentControl x:Name="MainContent" Grid.Column="1" Background="#EEE"/>
